# checkpoint9

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
install/: local_setup.sh  setup.sh
install/attach_shelf/lib/attach_shelf/: pre_approach_node
install/attach_shelf/share/ament_index/resource_index/parent_prefix_path/: attach_shelf
install/attach_shelf/share/attach_shelf/: local_setup.sh  package.sh
install/attach_shelf/share/attach_shelf/launch/: pre_approach.launch.xml
log/: latest_build
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.hpp  attach_server.hpp  pre_approach.hpp
my_components/launch/: attach_to_shelf.launch.py
my_components/src/: attach_client.cpp  attach_server.cpp  pre_approach.cpp
